--- a/.gitignore
+++ b/.gitignore
@@ -1,129 +1,83 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+Makefile
+Makefile.in
+configure
+config.log
+config.status
+aclocal.m4
+autom4te.cache
+libtool
+auto
+*.gz
+*.patch
+*.o
+*~
+\#*#
+.*
+!.gitignore
+*.bak
+*.err
+stdout
+*.lo
+*.la
+*.orig
+*.rej
+*.old
+TAGS
+INSTALL
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
+callgrind.*
+ms_print.*
+massif.*
+pan.*
+*.dvi
+*.aux
+*.ps
+*.pdf
+*.toc
+massif.*
+*.zip
+*.S
+*.tgba
+*.zip
+*.s
+*.ii
+cachegrind.*
+*.gcda
+*.gcno
+*.info
+ltdl
+config.h
+config.h.in
+spot/misc/_config.h
+_configs.sed
+stamp-h1
+*.trs
+_*_
+spot-*/*
+config.cache
+*.json
+*.fdb_latexmk
+*.xz
+dt*a-sat.cnf
+dt*a-sat.out
+dt*a-sat.dbg
+*.exe
+*.tex
+*.out
+*.cnf
+*.html
+*.dstar
+*.satlog
+*.png
+*.svg
+GPATH
+GRTAGS
+GSYMS
+GTAGS
+*.xz
+*.build
+*.deb
+*.changes
+*.dsc
+*.gcov
+spot.spec
