--- a/debian/rules
+++ b/debian/rules
@@ -20,20 +20,16 @@ include /usr/share/dpkg/default.mk
 %:
 	dh $@ --with=python3
 
-# Find the LTO plugin, which we need to pass to ar, nm, and ranlib.
-LTOPLUG := $(shell gcc -v 2>&1 | \
-  sed -n 's:COLLECT_LTO_WRAPPER=\(/.*/\)[^/]*:\1:p')liblto_plugin.so
-
 # ARFLAGS is for Automake
-# AR_FLAGS is for Libtool
-# These activate the LTO pluggin, but also remove the 'u' option
-# from ar, since its now ignored with Debian's default to 'D'.
-LTOSETUP =					    \
-  LDFLAGS='-fuse-linker-plugin'			    \
-  NM='nm --plugin $(LTOPLUG)'			    \
-  ARFLAGS='cr --plugin $(LTOPLUG)'		    \
-  AR_FLAGS='cr --plugin $(LTOPLUG)'		    \
-  RANLIB='ranlib --plugin $(LTOPLUG)'		    \
+# AR_FLAGS is for Libtool, (but libtool 2.4.7 will now use ARFLAGS as well)
+# The gcc-tools activate the LTO plugin.
+LTOSETUP =					\
+  LDFLAGS='-fuse-linker-plugin'			\
+  NM='gcc-nm'					\
+  AR='gcc-ar'					\
+  ARFLAGS='cr'					\
+  AR_FLAGS='cr'					\
+  RANLIB='gcc-ranlib'				\
   VALGRIND=false
 GCDADIR := $(shell pwd)/gcda
 
